adjusting password text area

--- a/style.css
+++ b/style.css
@@ -115,6 +115,7 @@ border: 2px solid var(--light-blue-dark);
 border-radius: 15px;
 resize: none;
 overflow: hidden;
+height: 150px;
 }
 
 /* modal */
